Fixing sidebars in landing builders on Safari

--- a/event_landing/demo/demo.css
+++ b/event_landing/demo/demo.css
@@ -294,7 +294,6 @@
 }
 
 .board-menu-container {
-    display: flex;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
@@ -313,7 +312,9 @@
     left: 0;
     display: -webkit-box;
     display: -webkit-flex;
+    display: block;
     display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
 }
